# Weather-App

./: docker-compose.yml  init.sql  pyproject.toml
weather_app/: forms.py  models.py  utils.py  views.py
weather_app/templates/: base.html  home.html  login.html  register.html  weather_search.html
weather_project/: settings.py  urls.py
